[SELC-4385] feat: Added dependency and configuration of product libs (#426)