@@ -1,18 +1,19 @@
 package it.pagopa.selfcare.dashboard.web.model.mapper;
 
-import it.pagopa.selfcare.commons.base.security.PartyRole;
-import it.pagopa.selfcare.dashboard.connector.model.product.BackOfficeConfigurations;
-import it.pagopa.selfcare.dashboard.connector.model.product.Product;
-import it.pagopa.selfcare.dashboard.connector.model.product.ProductRoleInfo;
+import it.pagopa.selfcare.commons.base.security.SelfCareAuthority;
 import it.pagopa.selfcare.dashboard.connector.model.product.ProductTree;
 import it.pagopa.selfcare.dashboard.web.model.product.BackOfficeConfigurationsResource;
 import it.pagopa.selfcare.dashboard.web.model.product.ProductRoleMappingsResource;
 import it.pagopa.selfcare.dashboard.web.model.product.ProductsResource;
 import it.pagopa.selfcare.dashboard.web.model.product.SubProductResource;
+import it.pagopa.selfcare.onboarding.common.PartyRole;
+import it.pagopa.selfcare.product.entity.BackOfficeConfigurations;
+import it.pagopa.selfcare.product.entity.Product;
+import it.pagopa.selfcare.product.entity.ProductRole;
+import it.pagopa.selfcare.product.entity.ProductRoleInfo;
 
 import java.util.Collection;
 import java.util.Map;
-import java.util.stream.Collectors;
 
 public class ProductsMapper {
 
@@ -28,10 +29,6 @@ public class ProductsMapper {
             resource.setDescription(model.getNode().getDescription());
             resource.setUrlPublic(model.getNode().getUrlPublic());
             resource.setUrlBO(model.getNode().getUrlBO());
-            resource.setActivatedAt(model.getNode().getActivatedAt());
-            resource.setAuthorized(model.getNode().isAuthorized());
-            resource.setUserRole(model.getNode().getUserRole());
-            resource.setProductOnBoardingStatus(model.getNode().getOnBoardingStatus());
             resource.setStatus(model.getNode().getStatus());
             resource.setDelegable(model.getNode().isDelegable());
             resource.setInvoiceable(model.getNode().isInvoiceable());
@@ -39,7 +36,7 @@ public class ProductsMapper {
             if (model.getChildren() != null) {
                 resource.setChildren(model.getChildren().stream()
                         .map(ProductsMapper::toChildren)
-                        .collect(Collectors.toList()));
+                        .toList());
             }
         }
 
@@ -51,7 +48,6 @@ public class ProductsMapper {
         if (model != null) {
             resource = new SubProductResource();
             resource.setId(model.getId());
-            resource.setProductOnBoardingStatus(model.getOnBoardingStatus());
             resource.setStatus(model.getStatus());
             resource.setDelegable(model.isDelegable());
             resource.setInvoiceable(model.isInvoiceable());
@@ -71,7 +67,7 @@ public class ProductsMapper {
         if (backOfficeEnvironmentConfigurations != null) {
             resource = backOfficeEnvironmentConfigurations.entrySet().stream()
                     .map(ProductsMapper::toProductBackOfficeConfigurations)
-                    .collect(Collectors.toList());
+                    .toList();
         }
         return resource;
     }
@@ -93,7 +89,7 @@ public class ProductsMapper {
         if (roleMappings != null) {
             resource = roleMappings.entrySet().stream()
                     .map(ProductsMapper::toProductRoleMappingsResource)
-                    .collect(Collectors.toList());
+                    .toList();
         }
         return resource;
     }
@@ -104,19 +100,19 @@ public class ProductsMapper {
         if (entry != null) {
             resource = new ProductRoleMappingsResource();
             resource.setPartyRole(entry.getKey());
-            resource.setSelcRole(entry.getKey().getSelfCareAuthority());
+            resource.setSelcRole(entry.getKey() != PartyRole.OPERATOR ? SelfCareAuthority.ADMIN : SelfCareAuthority.LIMITED);
             resource.setMultiroleAllowed(entry.getValue().isMultiroleAllowed());
             if (entry.getValue().getRoles() != null) {
                 resource.setProductRoles(entry.getValue().getRoles().stream()
                         .map(ProductsMapper::toProductRoleResource)
-                        .collect(Collectors.toList()));
+                        .toList());
             }
         }
         return resource;
     }
 
 
-    static ProductRoleMappingsResource.ProductRoleResource toProductRoleResource(ProductRoleInfo.ProductRole productRole) {
+    static ProductRoleMappingsResource.ProductRoleResource toProductRoleResource(ProductRole productRole) {
         ProductRoleMappingsResource.ProductRoleResource resource = null;
         if (productRole != null) {
             resource = new ProductRoleMappingsResource.ProductRoleResource();
